bump version number, start fixing java 16 deprecations